@@ -5,6 +5,7 @@
 	struct of several regex_t objects.
 	* lib/liblpatom.c (lpatom_reinit): added.
 	(lpatom_parse): introduced object based model.
+	(lpatom_suffix_parse): introduced object based model.
 
 	Updated Error Codes:
 	* lib/liblpxpak.c (lpxpak_parse_fd): returns EBADFD instead of
